integrate HMR & WDS

--- a/frontend/templates/frontend/index.html.j2
+++ b/frontend/templates/frontend/index.html.j2
@@ -1,3 +1,4 @@
+{% load render_bundle from webpack_loader %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 </head>
 <body>
-    <div id="root"></div>
+<div id="root"></div>
+{% render_bundle "main" %}
 </body>
 </html>
