--- a/frontend/static/frontend/js/index.scss
+++ b/frontend/static/frontend/js/index.scss
@@ -1,23 +1,32 @@
 @media (max-width: 576px) {
   html {
-    font-size: 1.05rem;
+    font-size: 0.95rem;
   }
 }
 
 @media (max-width: 768px) {
   html {
-    font-size: 1.10rem;
+    font-size: 1rem;
   }
 }
 
 @media (max-width: 992px) {
   html {
-    font-size: 1.15rem;
+    font-size: 1.05rem;
   }
 }
 
 @media (min-width: 992px) {
   html {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
+}
+
+.kill-card-shadow {
+  border: 1px solid #ddd !important;
+  box-shadow: none !important;
+}
+
+.kill-shadow {
+  box-shadow: none !important;
 }
