add EnlistingUnit, Instructor, AcademicYear, RegularClass models

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -5,8 +5,10 @@
     <title>UP Computerized Registration System</title>
     <meta charset="utf-8" />
     <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width" />
+    <meta http-equiv="Cache-Control" content="no-cache" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="shortcut icon" href="https://crs.upd.edu.ph/images/favicon.ico" />
 </head>
 <body>
     <div id="root"></div>
