--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -9,6 +9,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="shortcut icon" href="https://crs.upd.edu.ph/images/favicon.ico" />
+
+    {% if not settings.DEBUG and settings.PYTHON_ENV == "production" %}
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162676656-8"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-162676656-8');
+        </script>
+    {% endif %}
 </head>
 <body>
     <div id="root"></div>
