--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -1,6 +1,6 @@
 {% load render_bundle from webpack_loader %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>UP Computerized Registration System</title>
     <meta charset="utf-8" />
